Agrego alguito de estructura

--- a/trabajo-final.tex
+++ b/trabajo-final.tex
@@ -2,9 +2,21 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 
+\title{Métodos iterativos para la solución de problemas inversos discretos}
+\author{Rivas Jazmin et. al.}
+\date{}
+
 \begin{document}
-	Métodos iterativos para la solución de problemas inversos discretos
+	\maketitle
+	\tableofcontents
 	
-	poner integrantes, títulos, etc, todo prolijito...
+	
+	\chapter{Introducción}
+	
+	\section{Motivación}
+	Bla bla charla
+	\section{De ... a vectores}
+	Bla bla, mas charla
+	
 \end{document}
 	
