--- a/trabajo-final.tex
+++ b/trabajo-final.tex
@@ -43,15 +43,15 @@
 \end{definition}
 
 \begin{theorem}
-	Sea $A \in \mathbb{R}^{nxn}$, entonces: $$\rho(A)=\inf_{\norm{\cdot}}\norm{A}$$
+	Sea $A \in \mathbb{R}^{n\times n}$, entonces: $$\rho(A)=\inf_{\norm{\cdot}}\norm{A}$$
 \end{theorem}
 
 \begin{theorem}
-	Sea $A \in \mathbb{R}^{nxn}$, entonces: $$A^n \xrightarrow{n \xrightarrow{} \infty}0 \iff \rho(A)<1$$ 
+	Sea $A \in \mathbb{R}^{n\times n}$, entonces: $$A^n \xrightarrow{n \xrightarrow{} \infty}0 \iff \rho(A)<1$$ 
 \end{theorem}
 
 \begin{theorem}
-	Dado el sistemla lineal $Ax=b$, consideremos el método iterativo: $$x_{n+1}=M^{-1}b+(I-M^{-1}A)x_n$$ y sea $B=I-M^{-1}A$, entonces el método converge si y solo si $\rho(B)<1$.
+	Dado el sistema lineal $Ax=b$, consideremos el método iterativo: $$x_{n+1}=M^{-1}b+(I-M^{-1}A)x_n$$ y sea $B=I-M^{-1}A$, entonces el método converge si y solo si $\rho(B)<1$.
 \end{theorem}
 
 \subsection{Métodos estandar}
