--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3191b39f-5962-4a21-befe-a3c3e09039e4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c63006c7-f7da-4773-af44-b48ab6b77d82",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "11fc3ba8-9940-4bc4-8cce-988baf668e1c",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "       [7, 8, 0]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "76924a40-aa96-46d9-b720-3ba78b8ab380",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "       [0, 0, 9]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "17e20069-954c-47a3-8d76-aeb36cf32874",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "       [0, 0, 0]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "13cf599c-9fc5-47ca-87bd-5a3dd74f2485",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "array([1, 5, 9])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8e8e02b7-6846-4548-9fff-069e12b20958",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "       [0, 0, 9]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "383594bc-dbb7-4ee5-ae69-df03a16a58cc",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "       [0.        , 0.        , 0.11111111]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,9 +219,7 @@
   {
    "cell_type": "markdown",
    "id": "1763feff-ca02-4401-9611-abc502195974",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Método de Jacobi"
    ]
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9fd3688c-c85f-4e4d-bbc1-7a4ecc10abd9",
    "metadata": {},
    "outputs": [],
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "79455bed-50e8-4b4d-93b9-b3a3043bb6ee",
    "metadata": {},
    "outputs": [],
@@ -338,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "53ff170f-b7b1-4d0d-ae8f-3b8d7f8062f7",
    "metadata": {},
    "outputs": [
@@ -348,7 +346,7 @@
        "array([0.51372119, 0.62678375, 0.60922064])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "83599606-9b4f-4a3b-8aa8-7aeff557ab51",
    "metadata": {},
    "outputs": [
@@ -370,7 +368,7 @@
        "array([0.51372119, 0.62678375, 0.60922064])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "c45b1870-c78f-4e99-8868-48fe065eaeca",
    "metadata": {},
    "outputs": [],
@@ -429,7 +427,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
+   "id": "72f4bb0c-c78f-4360-ae47-4183ecb02354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aseveramos que el radio espectral de A es menor que 1\n",
+    "assert np.max(np.abs(np.linalg.eigvals(A))) < 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "7b128a31-2263-4f35-ba38-5cded40f8683",
    "metadata": {},
    "outputs": [
@@ -439,7 +448,7 @@
        "array([ 3.33333333, 13.33333333, 23.33333333])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "8ff4d166-f095-4c7c-b2e1-a28431df3053",
    "metadata": {},
    "outputs": [
@@ -461,7 +470,7 @@
        "array([ 3.33333333, 13.33333333, 23.33333333])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "faa21a03-4135-4c8b-b41d-650111ea4fd6",
    "metadata": {},
    "outputs": [],
@@ -521,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "1fe47b66-0276-4446-9b63-573d742347b6",
    "metadata": {},
    "outputs": [
@@ -529,9 +538,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_16612\\2618127736.py:23: RuntimeWarning: overflow encountered in matmul\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_13044\\2618127736.py:23: RuntimeWarning: overflow encountered in matmul\n",
       "  x_nuevo = D_inv @ (b - R@x)\n",
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_16612\\2618127736.py:23: RuntimeWarning: invalid value encountered in matmul\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_13044\\2618127736.py:23: RuntimeWarning: invalid value encountered in matmul\n",
       "  x_nuevo = D_inv @ (b - R@x)\n"
      ]
     },
@@ -542,8 +551,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Vemos la solución que nos da nuestro método de Jacobi\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mJacobi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[11], line 33\u001b[0m, in \u001b[0;36mJacobi\u001b[1;34m(A, b, tol, tope_iteraciones)\u001b[0m\n\u001b[0;32m     30\u001b[0m     x \u001b[38;5;241m=\u001b[39m x_nuevo\n\u001b[0;32m     31\u001b[0m     k \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 33\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdvertencia: se alcanzó el tope de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtope_iteraciones\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m iteraciones sin converger.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Vemos la solución que nos da nuestro método de Jacobi\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mJacobi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[10], line 33\u001b[0m, in \u001b[0;36mJacobi\u001b[1;34m(A, b, tol, tope_iteraciones)\u001b[0m\n\u001b[0;32m     30\u001b[0m     x \u001b[38;5;241m=\u001b[39m x_nuevo\n\u001b[0;32m     31\u001b[0m     k \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 33\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdvertencia: se alcanzó el tope de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtope_iteraciones\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m iteraciones sin converger.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mRuntimeError\u001b[0m: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger."
      ]
     }
@@ -563,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "b6a41463-2c29-4bef-88d6-8f4d78bd5007",
    "metadata": {},
    "outputs": [
@@ -573,7 +582,7 @@
        "array([7. , 1.6, 0.9])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "b640ef7b-e81e-4a06-96a7-2084d92c67af",
    "metadata": {},
    "outputs": [
@@ -595,7 +604,7 @@
        "array([-6.33333333e+00,  6.66666667e+00,  1.77635684e-15])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
