Agrego las cosas del otro día que me había olvidado de commitear

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "import numpy as np\n",
     "import scipy as sp\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import warnings"
    ]
   },
   {
@@ -219,7 +220,9 @@
   {
    "cell_type": "markdown",
    "id": "1763feff-ca02-4401-9611-abc502195974",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Método de Jacobi"
    ]
@@ -270,35 +273,39 @@
     "\n",
     "    # Inicializamos el vector respuesta\n",
     "    x = np.zeros(n)\n",
-    "\n",
-    "    # Definimos matrices de interés\n",
-    "    D_inv = np.diag(1 / np.diag(A))\n",
-    "    R = np.tril(A,-1) + np.triu(A,1)\n",
-    "\n",
-    "    # Definimos el tope de iteraciones\n",
-    "    tope_iteraciones = 1000\n",
-    "\n",
+    "    \n",
     "    k = 0\n",
+    "    # Iteramos mientras no superemos el límite de iteraciones\n",
     "    while k < tope_iteraciones:\n",
-    "        x_nuevo = D_inv @ (b - R@x)\n",
+    "        # Creamos una copia del vector x\n",
+    "        x_nuevo = np.copy(x)\n",
     "\n",
-    "        # Si el método se estacionó\n",
+    "        # Actualizamos a x_nuevo, que es x_i ^(k+1) en nuestra notación de arriba, siguiendo al método de Jacobi\n",
+    "        for i in range(n):\n",
+    "            suma = sum(A[i][j] * x[j] for j in range(n) if j != i)  \n",
+    "            x_nuevo[i] = (b[i] - suma) / A[i][i]\n",
+    "        \n",
+    "        # Si el método se estacionó, es decir, la diferencia entre el x_nuevo y el antiguo es menor que cierta tolerancia,\n",
+    "        # directamente devolvemos el x_nuevo\n",
     "        if np.linalg.norm(x_nuevo - x, ord = np.inf) < tol:\n",
     "            return x_nuevo\n",
     "\n",
-    "        # Actualizamos el valor de x\n",
+    "        # Actualizamos el valor de x para la siguiente iteración, y aumentamos en 1 el número de iteraciones\n",
     "        x = x_nuevo\n",
     "        k += 1\n",
-    "        \n",
-    "    raise RuntimeError(f\"Advertencia: se alcanzó el tope de {tope_iteraciones} iteraciones sin converger.\")"
+    "\n",
+    "    # Si terminamos el while sin que el método se estacione, hacemos que la función devuelva un mensaje de advertencia.\n",
+    "    warnings.warn(f\"Advertencia: se alcanzó el tope de {tope_iteraciones} iteraciones sin converger.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "740859d4-0511-4f7a-927b-7b7784e07aba",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### Ejemplo 1"
+    "#### Ejemplo 1 - Criterio EDD"
    ]
   },
   {
@@ -328,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defino una matriz y un vector para probar la función\n",
+    "# Definimos una matriz y un vector para probar la función\n",
     "\n",
     "A = np.asarray([[10,2,1],[1,10,2],[2,3,10]])\n",
     "b = np.array([7,8,9])"
@@ -388,112 +395,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7daace32-c697-47e3-80eb-cc379dc5c457",
-   "metadata": {},
-   "source": [
-    "### Ejemplo 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9eaffd97-f14a-4560-af2b-12bb9f30f05a",
-   "metadata": {},
-   "source": [
-    "Tomemos la matriz\n",
-    "$$\n",
-    "A\n",
-    "=\n",
-    "\\begin{pmatrix}\n",
-    "0.3 & 0.1 & 0.2 \\\\\n",
-    "0.1 & 0.4 & 0.1 \\\\\n",
-    "0.2 & 0.1 & 0.3\n",
-    "\\end{pmatrix}\n",
-    "$$\n",
-    "que, como veremos, cumple $\\rho(A) < 1$ y por tanto debería converger"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "c45b1870-c78f-4e99-8868-48fe065eaeca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defino una matriz y un vector para probar la función\n",
-    "\n",
-    "A = np.asarray([[0.3,0.1,0.2],[0.1,0.4,0.1],[0.2,0.1,0.3]])\n",
-    "b = np.array([7,8,9])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "72f4bb0c-c78f-4360-ae47-4183ecb02354",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aseveramos que el radio espectral de A es menor que 1\n",
-    "assert np.max(np.abs(np.linalg.eigvals(A))) < 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7b128a31-2263-4f35-ba38-5cded40f8683",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.33333333, 13.33333333, 23.33333333])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Vemos la solución que nos da Python con numpy\n",
-    "np.linalg.solve(A,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "8ff4d166-f095-4c7c-b2e1-a28431df3053",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.33333333, 13.33333333, 23.33333333])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Vemos la solución que nos da nuestro método de Jacobi\n",
-    "Jacobi(A,b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b512d5bb-0142-49b9-a03e-3b2004204b27",
-   "metadata": {},
-   "source": [
-    "Observamos, entonces, el comportamiento esperado."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cdf9f41e-6d0b-4a3f-83b8-294efa43f97f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### Ejemplo 3"
+    "#### Ejemplo 2 - Método no convergiendo"
    ]
   },
   {
@@ -512,17 +419,17 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "observaremos que al no cumplir ninguna de las condiciones de Jacobi, no convergerá a una buena solución."
+    "observaremos que al no cumplir ninguna de las condiciones de Jacobi, podría no converger a una buena solución."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "faa21a03-4135-4c8b-b41d-650111ea4fd6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defino otra matriz para probar cuando Jacobi no converge\n",
+    "# Definimos otra matriz para probar cuando Jacobi no converge\n",
     "\n",
     "A = np.asarray([[1,2,3],[4,5,6],[7,8,10]])\n",
     "b = np.array([7,8,9])"
@@ -530,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "1fe47b66-0276-4446-9b63-573d742347b6",
    "metadata": {},
    "outputs": [
@@ -538,22 +445,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_13044\\2618127736.py:23: RuntimeWarning: overflow encountered in matmul\n",
-      "  x_nuevo = D_inv @ (b - R@x)\n",
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_13044\\2618127736.py:23: RuntimeWarning: invalid value encountered in matmul\n",
-      "  x_nuevo = D_inv @ (b - R@x)\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Advertencia: se alcanzó el tope de 1000 iteraciones sin converger.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Vemos la solución que nos da nuestro método de Jacobi\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mJacobi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[10], line 33\u001b[0m, in \u001b[0;36mJacobi\u001b[1;34m(A, b, tol, tope_iteraciones)\u001b[0m\n\u001b[0;32m     30\u001b[0m     x \u001b[38;5;241m=\u001b[39m x_nuevo\n\u001b[0;32m     31\u001b[0m     k \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 33\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdvertencia: se alcanzó el tope de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtope_iteraciones\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m iteraciones sin converger.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger."
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_4776\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar add\n",
+      "  suma = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_4776\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "  suma = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_4776\\2863069600.py:35: UserWarning: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger.\n",
+      "  warnings.warn(f\"Advertencia: se alcanzó el tope de {tope_iteraciones} iteraciones sin converger.\")\n"
      ]
     }
    ],
@@ -572,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "b6a41463-2c29-4bef-88d6-8f4d78bd5007",
    "metadata": {},
    "outputs": [
@@ -582,7 +479,7 @@
        "array([7. , 1.6, 0.9])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "b640ef7b-e81e-4a06-96a7-2084d92c67af",
    "metadata": {},
    "outputs": [
@@ -604,7 +501,7 @@
        "array([-6.33333333e+00,  6.66666667e+00,  1.77635684e-15])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,21 +515,206 @@
    "id": "4656c830-d273-49d7-b26a-1228ebd968ac",
    "metadata": {},
    "source": [
-    "Vemos que las soluciones en este caso son significativamente distintas. Esto nos confirma que para la utilización de métodos iterativos deberemos ser cautelosos sobre las condiciones que hay que imponerle a la matriz para que converjan."
+    "Vemos que las soluciones en este caso son significativamente distintas. Esto nos confirma que para la utilización de métodos iterativos deberemos ser cautelosos sobre las condiciones que hay que imponerle a la matriz para que converjan, y que el estudio de la convergencia de los métodos es muy importante."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "7f7e0196-0a5d-4130-9834-871dad1b6e53",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Método de Gauss-Seidel"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b338f31f-e5a5-4dcd-a7b0-e71a20d5c2a9",
+   "metadata": {},
+   "source": [
+    "En el método de Gauss-Seidel, escribimos a la matriz $A$ como\n",
+    "\n",
+    "$$A= R + U$$\n",
+    "\n",
+    "donde $U$ es triangular superior con ceros en la diagonal y $R$ es la suma de una matriz triangular inferior $L$ y la matrix diagonal $D$, es decir $R=L+D$. Para resolver $Ax=b$, tenemos:\n",
+    "\n",
+    "$$(R+U)x=b$$\n",
+    "$$Rx + Ux = b$$\n",
+    "\n",
+    "y por lo tanto,\n",
+    "\n",
+    "$$x = R^{-1} (b-Ux)$$\n",
+    "\n",
+    "Si fuera que $a_{ii}=0$ para todo $i$, entonces la regla iterativa del método de Gauss-Seidel puede ser definida como:\n",
+    "\n",
+    "$$x^{(k+1)} = (L+D)^{-1} \\left(b-Ux^{(k)}\\right)$$\n",
+    "\n",
+    "o de otra manera:\n",
+    "\n",
+    "$$x_i^{(k+1)} = \\frac{1}{a_{ii}} \\left(b_i - \\sum_{j = i+1}^{n} a_{ij}x_j^{(k)} - \\sum_{j=1}^{i-1}a_{ij}x_{j}^{(k+1)} \\right) \\, \\text{, para todo } i$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d744c788-c745-4a0c-9cbd-22ef21759e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Gauss_Seidel(A, b, tol = 1e-10, tope_iteraciones = 1000):\n",
+    "    # Chequeamos que las dimensiones sean apropiadas\n",
+    "    if A.shape[0] != A.shape[1]:\n",
+    "        raise ValueError(\"La matriz A no es cuadrada\")\n",
+    "    if A.shape[1] != b.shape[0]:\n",
+    "        raise ValueError(\"Las dimensiones del sistema no cuadran\")\n",
+    "\n",
+    "    # Definimos a n como la dimensión de la matriz\n",
+    "    n = A.shape[0]\n",
+    "\n",
+    "    # Inicializamos el vector respuesta\n",
+    "    x = np.zeros(n)\n",
+    "\n",
+    "    k = 0\n",
+    "    # Iteramos mientras no superemos el límite de iteraciones\n",
+    "    while k < tope_iteraciones:\n",
+    "        # Creamos una copia del vector x\n",
+    "        x_nuevo = np.copy(x)\n",
+    "\n",
+    "        # Actualizamos a x_nuevo, que es x_i ^(k+1) en nuestra notación de arriba, siguiendo al método de Gauss-Seidel\n",
+    "        for i in range(n):\n",
+    "            suma = sum(A[i][j] * x_nuevo[j] for j in range(i)) + sum(A[i][j] * x[j] for j in range(i + 1, n))\n",
+    "            x_nuevo[i] = (b[i] - suma) / A[i][i]\n",
+    "            \n",
+    "        # Si el método se estacionó, es decir, la diferencia entre el x_nuevo y el antiguo es menor que cierta tolerancia,\n",
+    "        # directamente devolvemos el x_nuevo\n",
+    "        if np.linalg.norm(x_nuevo - x, ord = np.inf) < tol:\n",
+    "            return x_nuevo\n",
+    "\n",
+    "        # Actualizamos el valor de x para la siguiente iteración, y aumentamos en 1 el número de iteraciones\n",
+    "        x = x_nuevo\n",
+    "        k += 1\n",
+    "        \n",
+    "    # Si terminamos el while sin que el método se estacione, hacemos que la función devuelva un mensaje de advertencia.    \n",
+    "    warnings.warn(f\"Advertencia: se alcanzó el tope de {tope_iteraciones} iteraciones sin converger.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7daace32-c697-47e3-80eb-cc379dc5c457",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo 1 - Criterio Hermitiana y Definida Positiva"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eaffd97-f14a-4560-af2b-12bb9f30f05a",
+   "metadata": {},
+   "source": [
+    "Tomemos la matriz\n",
+    "$$\n",
+    "A\n",
+    "=\n",
+    "\\begin{pmatrix}\n",
+    "0.3 & 0.1 & 0.2 \\\\\n",
+    "0.1 & 0.4 & 0.1 \\\\\n",
+    "0.2 & 0.1 & 0.3\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "que, como veremos, es hermitiana y definida positiva, por lo que debería converger el método de Gauss-Seidel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c45b1870-c78f-4e99-8868-48fe065eaeca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definimos otra matriz y otro vector para probar la función\n",
+    "\n",
+    "A = np.asarray([[0.3,0.1,0.2],[0.1,0.4,0.1],[0.2,0.1,0.3]])\n",
+    "b = np.array([7,8,9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "57cc9a9c-26e4-46af-802b-e24f5d804aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aseveramos que la matriz es hermitiana\n",
+    "assert np.allclose(A.conj().T, A)\n",
+    "# Aseveramos que la matriz es definida positiva\n",
+    "assert np.all(np.linalg.eigvals(A)>0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9782921e-6dd8-4d75-94fb-d3231c2a7a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.33333333, 13.33333333, 23.33333333])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vemos la solución que nos da Python con numpy\n",
+    "np.linalg.solve(A,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e7ac4e89-692d-48ed-b639-c412429a9ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.33333333, 13.33333333, 23.33333333])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vemos la solución que nos da nuestro método de Jacobi\n",
+    "Gauss_Seidel(A,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd3ea5d-51c8-42fd-99ea-7adb37f52b67",
+   "metadata": {},
+   "source": [
+    "Observamos, entonces, el comportamiento esperado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df1b1594-77ca-4893-ad5d-7a24a79b22cd",
+   "metadata": {},
+   "source": [
+    "## Método de Residuo Generalizado Mínimo (GMRES)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d744c788-c745-4a0c-9cbd-22ef21759e27",
+   "id": "0cd77cf6-da70-4c56-b75f-93458ebf47f7",
    "metadata": {},
    "outputs": [],
    "source": []
